local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-route-virtapp
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route-virtapp"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/server-snippet: |
      expires 1M;
      add_header Cache-Control "public";
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Client-Cert $ssl_client_fingerprint;
      add_header Cache-Control "max-age=0, no-cache, no-store, must-revalidate";
      add_header X-Frame-Options SAMEORIGIN;
      add_header Strict-Transport-Security "max-age=31536000;includeSubdomains; preload";
      more_set_headers "server-tokens: Virtapp Technologies"
      more_clear_headers "Server";
      more_set_headers "X-Frame-Options: Deny";
      more_set_headers "X-Xss-Protection: 1; mode=block";
      more_set_headers "X-Content-Type-Options: nosniff";
    nginx.ingress.kubernetes.io/enable-access-log: "false"
spec:
  tls:
  - secretName: virtapp
  rules:

  - host: virtapp.io
    http:
      paths:
      - backend:
          service:
            name: wordpress-local
            port:
              number: 80
        path: /
        pathType: Prefix
